--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
 		"sourceType": "module"
 	},
 	"rules": {
+		"no-undef": "off",
+		"class-methods-use-this": "off",
 		"no-console": "off",
 		"no-underscore-dangle": "off"
 	}
